--- a/src/main/resources/btm/spec.mustache
+++ b/src/main/resources/btm/spec.mustache
@@ -5,7 +5,7 @@ import spock.lang.Specification;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.alibaba.ttl.threadpool.agent.TtlAgent;
 import com.zte.sputnik.Sputnik;
-import com.zte.sputnik.extension.BmUnitRule
+import com.zte.sputnik.extension.BMRuleLoader
 import org.jboss.byteman.contrib.bmunit.BMRule
 import org.jboss.byteman.contrib.bmunit.BMRules
 import org.jboss.byteman.contrib.bmunit.BMUnitConfig
