--- a/src/main/resources/btm/spec.mustache
+++ b/src/main/resources/btm/spec.mustache
@@ -43,9 +43,9 @@ class {{className}} extends Specification {
 void 'verify method:{{signature}}'() {
 given:
 {{subjectDecl}}
-{{#valueBlock}}
+{{#fieldsInitBlock}}
     {{.}}
-{{/valueBlock}}
+{{/fieldsInitBlock}}
 {{#hasStaticInvoke}}
     InvokeStaicHelper.cleanup()
     def invokeStaticDefs=[:]
