--- a/src/main/resources/btm/spec.mustache
+++ b/src/main/resources/btm/spec.mustache
@@ -4,7 +4,6 @@ package {{pkg}}
 import spock.lang.Specification;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.alibaba.ttl.threadpool.agent.TtlAgent;
-import com.zte.sputnik.Sputnik;
 import com.zte.sputnik.extension.BMRuleLoader
 import org.jboss.byteman.contrib.bmunit.BMRule
 import org.jboss.byteman.contrib.bmunit.BMRules
@@ -15,7 +14,11 @@ import com.zte.sputnik.extension.InvokeStaicHelper
 
 
 /**
-*   http://spockframework.org/
+* {{title}}
+* generated from {{invocationId}}
+* {{#tc}}from class :{{tc}}{{/tc}}
+* {{#tm}}from method: {{tm}}{{/tm}}
+* @date {{now}}
 */
 class {{className}} extends Specification {
 
@@ -34,7 +37,7 @@ class {{className}} extends Specification {
                 binding = 'mockHandler:{{pkg}}.{{className}}$StaticStub{{value.mid}}=getMock("{{value.ownerName}}::{{value.erased}}@{{pkg}}.{{className}}")',
                 targetLocation = "AT ENTRY",
                 helper='com.zte.sputnik.extension.InvokeStaicHelper',
-                condition = 'hasMethod("{{value.ownerName}}::{{value.erased}}@{{pkg}}.{{className}}")',
+                condition = 'hasMethod("{{value.ownerName}}::{{value.erased}}@{{pkg}}.{{className}}",$*)',
                 action = 'return mockHandler.{{value.name}}({{value.argRefs}})'
             ),
         {{/staticNames}}
